[gd_scene load_steps=18 format=3 uid="uid://co0ha8sp7qfqg"]

[ext_resource type="Script" path="res://MiniGames/PunchMiniGame/Punch Fish.gd" id="1_rco4h"]
[ext_resource type="Texture2D" uid="uid://bi7fatllpk4fp" path="res://Common/Assets/Sprites/fsh.png" id="2_dkria"]
[ext_resource type="Texture2D" uid="uid://10rtktso6xep" path="res://Common/Assets/Sprites/smack.png" id="3_kdwyl"]
[ext_resource type="Texture2D" uid="uid://ic0vcmomk036" path="res://Common/Assets/Sprites/target.png" id="3_sldd7"]

[sub_resource type="Curve2D" id="Curve2D_n1roc"]
_data = {
"points": PackedVector2Array(-2.31175, 64.256, 2.31175, -64.256, 64.8829, 328.428, -112.622, -3.00324, 112.622, 3.00324, 192, 64, -14.0843, -61.1047, 14.0843, 61.1047, 321.739, 323.077)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep623"]
size = Vector2(36.4789, 76.05)

[sub_resource type="CircleShape2D" id="CircleShape2D_sy8ki"]
radius = 10.5634

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj7y8"]
bg_color = Color(0.340369, 0.702702, 1.15514e-06, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_buay5"]
atlas = ExtResource("3_kdwyl")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_alr1c"]
atlas = ExtResource("3_kdwyl")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmov5"]
atlas = ExtResource("3_kdwyl")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnyr7"]
atlas = ExtResource("3_kdwyl")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmlq2"]
atlas = ExtResource("3_kdwyl")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_754gi"]
atlas = ExtResource("3_kdwyl")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovrp7"]
atlas = ExtResource("3_kdwyl")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_velxf"]
atlas = ExtResource("3_kdwyl")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_g5aft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buay5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alr1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmov5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnyr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmlq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_754gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovrp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_velxf")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[node name="Path L>R" type="Path2D"]
position = Vector2(318, 182.465)
scale = Vector2(1.495, 1.59711)
curve = SubResource("Curve2D_n1roc")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(229.424, 73.5401)
rotation = 0.486265
progress = 360.401
cubic_interp = false
loop = false
script = ExtResource("1_rco4h")

[node name="Sprite2D" type="Sprite2D" parent="PathFollow2D"]
position = Vector2(0.0245523, 0.0305395)
rotation = 1.56099
scale = Vector2(0.0768756, 0.0768756)
texture = ExtResource("2_dkria")

[node name="Timer" type="Timer" parent="PathFollow2D"]
wait_time = 2.0
autostart = true

[node name="Area2D2" type="Area2D" parent="PathFollow2D"]
position = Vector2(0.248314, 0.205246)
rotation = 1.53483

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2D2"]
position = Vector2(0.339554, 2.62003)
rotation = -1.53483
shape = SubResource("RectangleShape2D_ep623")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(192, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2.1505, 2.1505)
shape = SubResource("CircleShape2D_sy8ki")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(-0.695677, 0.21405)
scale = Vector2(0.123718, 0.123718)
texture = ExtResource("3_sldd7")
offset = Vector2(-30, 35)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 114.381
offset_top = -9.36455
offset_right = 268.381
offset_bottom = 17.6355
theme_override_styles/fill = SubResource("StyleBoxFlat_mj7y8")
rounded = true
allow_greater = true
show_percentage = false

[node name="Button" type="Button" parent="."]
offset_left = 298.997
offset_top = -20.7358
offset_right = 356.997
offset_bottom = 37.2642
scale = Vector2(0.0545355, 0.0545355)
theme_override_font_sizes/font_size = 500
text = "Release
Fish"

[node name="fish_Label" type="Label" parent="."]
offset_left = 122.408
offset_top = -38.1271
offset_right = 263.408
offset_bottom = -15.1271
scale = Vector2(0.0369223, 0.0369223)
theme_override_font_sizes/font_size = 500
text = "Fish type: bleh hehe"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(189.298, 117.057)
scale = Vector2(0.246154, 0.4)
sprite_frames = SubResource("SpriteFrames_g5aft")
autoplay = "default"
frame = 7
frame_progress = 1.0

[connection signal="timeout" from="PathFollow2D/Timer" to="PathFollow2D" method="_on_timer_timeout"]
[connection signal="area_entered" from="PathFollow2D/Area2D2" to="PathFollow2D" method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="PathFollow2D/Area2D2" to="PathFollow2D" method="_on_area_2d_2_area_exited"]
[connection signal="area_entered" from="Area2D" to="PathFollow2D" method="_on_area_2d_area_entered"]
[connection signal="pressed" from="Button" to="PathFollow2D" method="_on_button_pressed"]
